# full-stack-fastapi-template-simplified

./: .dockerignore  .env.example  .gitignore  Makefile  README.md  docker-compose.prod.yml  docker-compose.yml  proxy.conf
.github/workflows/: deployment.yml
backend/: .env.example  .gitignore  Dockerfile  Dockerfile.prod  pyproject.toml
backend/migrations/: env.py
backend/src/: __init__.py
backend/src/interfaces/: postgres.py
docs/: deployment.md  digital-ocean.md
frontend/: Dockerfile  Dockerfile.prod
